font face observer added

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <div class="w-full h-128 bg-orange-100" id="drawing"></div>
     </main>
     <hr />
+    <!-- <script defer src="/web_modules/fontfaceobserver/fontfaceobserver.js"></script> -->
     <script type="module" defer src="./js/main.js"></script>
     <div id="vueApp"></div>
     <!-- <script type="module" src="./js/vueApp.js"></script> -->
