--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
 <link rel="stylesheet" href="/style.css">
 
 <section id="senei" class="container flex mx-auto mt-5 mb-5 logo"></section>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/fontfaceobserver/2.1.0/fontfaceobserver.standalone.js"></script>
 <script type="module" src="https://unpkg.com/vue@3.0.0-beta.5/dist/vue.esm-browser.prod.js"></script>
 <script type="module" src="/index.js"></script>
