--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="robots" content="noindex, noarchive" />
-
 <title>senei web`s - variation on web development</title>
 
 <link
-  href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css"
+  href="./web_modules/tailwindcss/tailwind.min.css"
   rel="stylesheet"
 />
 <link rel="stylesheet" href="/style.css">
 
 <section id="senei" class="container flex mx-auto mt-5 mb-5 logo"></section>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/fontfaceobserver/2.1.0/fontfaceobserver.standalone.js"></script>
 <script type="module" src="https://unpkg.com/vue@3.0.0-beta.5/dist/vue.esm-browser.prod.js"></script>
+<script src="./web_modules/fontfaceobserver/fontfaceobserver.standalone.js"></script>
 <script type="module" src="/index.js"></script>
