--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   rel="stylesheet"
 />
 
-<section id="senei" class="container flex mx-auto mt-5 mb-5 logo"></section>
+<section id="senei" class="flex mx-auto mt-5 mb-5 logo"></section>
 
 <script src="./web_modules/fontfaceobserver/fontfaceobserver.standalone.js"></script>
 <script type="module" src="https://unpkg.com/vue@3.0.0-beta.5/dist/vue.esm-browser.prod.js"></script>
-<script type="module" src="/index.js"></script>
+<script type="module" src="./index.js"></script>
