--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<link rel="stylesheet" href="/style.css">
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="robots" content="noindex, noarchive" />
@@ -8,9 +7,10 @@
   href="./web_modules/tailwindcss/tailwind.min.css"
   rel="stylesheet"
 />
+<link rel="stylesheet" href="/style.css">
 
-<section id="senei" class="flex mx-auto mt-5 mb-5 logo"></section>
+<main id="senei" ></main>
 
 <script src="./web_modules/fontfaceobserver/fontfaceobserver.standalone.js"></script>
-<script type="module" src="https://unpkg.com/vue@3.0.0-beta.5/dist/vue.esm-browser.prod.js"></script>
-<script type="module" src="./index.js"></script>
+<script type="module" src="https://unpkg.com/vue@3.0.0-beta.9/dist/vue.esm-browser.prod.js"></script>
+<script type="module" src="/index.js"></script>
