web_modules / vue

--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
+<link rel="stylesheet" href="/style.css">
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="robots" content="noindex, noarchive" />
 <title>senei web`s - variation on web development</title>
 
 <link
-  href="./web_modules/tailwindcss/tailwind.min.css"
+  href="/web_modules/tailwindcss/tailwind.min.css"
   rel="stylesheet"
 />
-<link rel="stylesheet" href="./style.css">
-
 <main id="senei" ></main>
 
-<script src="./web_modules/fontfaceobserver/fontfaceobserver.standalone.js"></script>
-<script type="module" src="https://unpkg.com/vue@3.0.0-beta.9/dist/vue.esm-browser.prod.js"></script>
-<script type="module" src="./index.js"></script>
+<script src="/web_modules/fontfaceobserver/fontfaceobserver.standalone.js"></script>
+<script type="module" src="/web_modules/vue/vue.runtime.esm-browser.prod.js"></script>
+<script type="module" src="/web_modules/vue/vue-router.esm.js"></script>
+
+<script type="module" src="/index.js"></script>
