--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
 <title>senei web`s - variation on web development</title>
 
 <link href="/web_modules/tailwindcss/tailwind.min.css" rel="stylesheet" />
-<link rel="stylesheet" href="/style.css">
+<link rel="stylesheet" href="/assets/style.css">
 
 <main id="senei"></main>
 
 <script src="/web_modules/fontfaceobserver/fontfaceobserver.standalone.js"></script>
 
 <script type="module" src="/web_modules/vue/vue.runtime.esm-browser.prod.js"></script>
-<script type="module" src="/web_modules/vue/vue-router.esm.js"></script>
 <script type="module" src="/index.js"></script>
