--- a/index.html
+++ b/index.html
@@ -1,14 +1,31 @@
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<meta name="robots" content="noindex, noarchive" />
-<title>senei web`s - variation on web development</title>
+<link href="/assets/tailwind.min.css" rel="stylesheet" />
+<style>
 
-<link href="/web_modules/tailwindcss/tailwind.min.css" rel="stylesheet" />
-<link rel="stylesheet" href="/assets/style.css">
+  @font-face{ font-family:"StencilRough"; src:url("/assets/fonts/PorticoStencilRough.ttf") format("truetype"), url("/assets/fonts/PorticoStencilRough.woff2") format("woff2"), url("/assets/fonts/PorticoStencilRough.woff") format("woff"); font-weight:bold; font-style:normal;} 
+  @keyframes zommInOut { from { background-size:  100% auto; } to { background-size: 140% auto; } }
+  .logo{ 
+    max-width:640px; 
+    min-height:360px; 
+    /**/
+    background-image: url("/assets/img/pawel-czerwinski-KWpm9MmEo2s-unsplash.jpg");
+    background-repeat: no-repeat;  
+    background-position: center center;
+    background-size:  100% auto; 
+    /**/
+    display:flex;  
+    justify-content: center;
+    align-items: stretch;
+    /**/
+    animation: 3s zommInOut forwards ;
+    animation-delay: 0s;
+  }
 
-<main id="senei"></main>
+  @media (max-width: 360px) {
+    .logo {min-height: 270px; background-size:cover!important; }
+  }
+  /* .logo .name {color: transparent;} */
+  /* .has-stencil .name {color: black;} */
+</style><link rel="stylesheet" href="/style.css">
 
-<script src="/web_modules/fontfaceobserver/fontfaceobserver.standalone.js"></script>
-
-<script type="module" src="/web_modules/vue/vue.runtime.esm-browser.prod.js"></script>
+<main id="senei" class="logo m-4 mx-auto"></main>
 <script type="module" src="/index.js"></script>
